# msdss-data-api

./: DEVELOPER.md  README.md  env.yml  setup.cfg
docs/: .buildinfo  genindex.html  howitworks.html  index.html  install.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: environment.pickle  howitworks.doctree  index.doctree  install.doctree  quickstart.doctree
docs/.doctrees/reference/: cli.doctree  core.doctree  data.doctree  handlers.doctree  index.doctree  managers.doctree  models.doctree  routers.doctree  tools.doctree  users.doctree
docs/_images/: graphviz-282c37fc29760987b1c4bcdc2cf6aaa01243071a.png.map  graphviz-3573712987ddf0948ca17b06d078153134d0f82e.png.map  graphviz-474fb8d9465638e1d955ea357539411cc32f9ce8.png.map  graphviz-49ea1c80004c44f79411de6bd1ac337aba6ec020.png.map  graphviz-75b866cfc72458c5c74a4a7f67f960f03ec34d28.png.map  graphviz-7912d3ba4e841c9eeb78dbcb80a6190b00d0f589.png.map  graphviz-f5d8bdee9f698af2afe79933af8728fdc0dfed58.png.map
docs/_modules/: index.html
docs/_modules/msdss_data_api/: cli.html  core.html  data.html  handlers.html  managers.html  (+3 more)
docs/_sources/: howitworks.rst.txt  index.rst.txt  install.rst.txt  quickstart.rst.txt
docs/reference/: cli.html  core.html  data.html  handlers.html  index.html  managers.html  models.html  routers.html  tools.html  users.html
docs/source/: conf.py  howitworks.rst  install.rst  quickstart.rst
src/msdss_data_api/: cli.py  core.py  data.py  defaults.py  handlers.py  managers.py  models.py  routers.py  tools.py  users.py
(+16 files in other folders)
