[metadata]
name = msdss-data-api
version = 0.2.1
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Data management API for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-data-api
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-data-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    msdss-base-api
    msdss-base-database
    msdss-base-dotenv
python_requires = >=3.8

[options.extras_require]
users-postgresql = msdss-users-api[postgresql]
users-mysql = msdss-users-api[mysql]
users-sqlite = msdss-users-api[sqlite]
postgresql = msdss-base-database[postgresql]
mysql = msdss-base-database[mysql]
sqlite = msdss-base-database[sqlite]

[options.entry_points]
console_scripts =
    msdss-data = msdss_data_api.cli:run

[options.packages.find]
where = src